Dynamic paint baking issues #57938

Closed
opened 2018-11-19 15:28:30 +01:00 by Sergey Sharybin · 3 comments

System Information

Debian Buster 64bit, GTX1080 390.87

Blender Version

Broken: b0c463a274
Worked: master

Short description of error

Dynamic paint does not properly store baked results and does not use already baked files.

Exact steps for others to reproduce the error

Open attached .blend file (saved with 2.7) and hit viewport render. Scrubbing around updates the canvas. However, there are issues:

  • Open file in 2.7, bake dynamic paint, open in 2.8 and observe that non-continuous jump in timeline does not use baked files.
  • Baking in 2.8 doesn't do much (well, maybe it saves files, but they aren't used).

dynamicpaint.blend

**System Information** Debian Buster 64bit, GTX1080 390.87 **Blender Version** Broken: b0c463a274 Worked: master **Short description of error** Dynamic paint does not properly store baked results and does not use already baked files. **Exact steps for others to reproduce the error** Open attached .blend file (saved with 2.7) and hit viewport render. Scrubbing around updates the canvas. However, there are issues: - Open file in 2.7, bake dynamic paint, open in 2.8 and observe that non-continuous jump in timeline does not use baked files. - Baking in 2.8 doesn't do much (well, maybe it saves files, but they aren't used). [dynamicpaint.blend](https://archive.blender.org/developer/F5637859/dynamicpaint.blend)
Author
Owner

Added subscriber: @Sergey

Added subscriber: @Sergey
Sergey Sharybin self-assigned this 2018-11-19 15:28:40 +01:00

This issue was referenced by 698f1e3d94

This issue was referenced by 698f1e3d942adf4a28c89b7d4a4a7be6ad53624f
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57938
No description provided.