Fix T57938: Dynamic paint baking issues

Quite usual fix for the caching systems.